# quipubase

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  compose.yml  data.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.cuda.txt  requirements.txt
client/: bun.lockb  index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
client/src/: App.vue  auto-imports.d.ts  components.d.ts  main.ts  shims.d.ts
client/src/components/: AppTextInput.vue  AppUserInput.vue  Auth.vue  GradientButton.vue  Message.vue  Microphone.vue  Modal.vue  Notifier.vue  TextBlock.vue
client/src/composables/: drag.ts  speech.ts  stream.ts
client/src/layouts/: 404.vue  default.vue  home.vue
client/src/pages/: [...all].vue  index.vue
client/src/stores/: user.ts
client/src/styles/: main.scss  markdown.scss  variables.scss
client/src/types/: api.ts  common.ts  index.ts  quipubase.ts
docs/: README.md  doc.docx  doc.pptx  pdf.py  powerpoint.py  requirements.txt  word.py
quipubase/: __init__.py  __main__.py  agent_tool.py  auth.py  cli.py  const.py  documents.py  embed.py  events.py  helpers.py  proxy.py  pubsub.py  qapi.py  qconst.py  qdoc.py  qembed.py  qfiles.py  qimage.py  qllm.py  qproxy.py  qpubsub.py  qschemas.py  qtools.py  quipubase.cpp  quipubase.pyi  quipubase.pyx  qutils.py  qvector.py  qvtable.py  schemas.py  security.py  setup.py  utils.py  vector.py
quipubase/lib/: __init__.py  _base.py  load_docx.py  load_pdf.py  load_pptx.py  load_xlsx.py
quipubase/security/: auth.py  config.py
tests/: test_doc.py
